<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:id="@+id/flyChose"
            android:text="@string/flyChose" />
        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/flyChose1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:id="@+id/controlChose"
            android:text="@string/controlChose" />
        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/controlChose1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:id="@+id/cellTyle"
            android:text="@string/cellTyle" />
        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/cellTyle1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:id="@+id/controlRet"
            android:text="@string/controlRet" />
        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/controlRet1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:id="@+id/stopSpeed"
            android:text="@string/stopSpeed" />

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/NumberProgressBar_Defaule"
            android:focusable="false"
            android:max="100"
            android:progressDrawable="@drawable/numberseekbar_background"
            android:thumb="@drawable/thumb_bar"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dataSet"
            android:id="@+id/dataSet"
            android:background="@android:color/transparent"
            android:textColor="#696969"/>




</LinearLayout>
