<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="25dp"
       android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/voltage1"
        android:text="@string/voltage"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/voltage"
        android:layout_marginLeft="200dp"
        android:text="0.0"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="40dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start1"
            android:text="@string/start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:layout_marginLeft="200dp"
            android:text="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="个"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accelerate1"
            android:text="@string/accelerate"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accelerate"
            android:layout_marginLeft="185dp"
            android:layout_marginRight="50dp"
            android:text="ACC异常"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/angle1"
            android:text="@string/angle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/angle"
            android:layout_marginLeft="185dp"
            android:layout_marginRight="50dp"
            android:text="IMU异常"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/geomagnetism1"
            android:text="@string/geomagnetism"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/geomagnetism"
            android:layout_marginLeft="195dp"
            android:layout_marginRight="50dp"
            android:text="MAG异常"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gyroscope1"
            android:text="@string/gyroscope"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gyroscope"
            android:layout_marginLeft="180dp"
            android:layout_marginRight="50dp"
            android:text="GYRO异常"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flyState1"
            android:text="@string/flyState"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flyState"
            android:layout_marginLeft="175dp"
            android:layout_marginRight="50dp"
            android:text="四轴十字逆"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remoteControl1"
            android:text="@string/remoteControl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remoteControl"
            android:layout_marginLeft="190dp"
            android:layout_marginRight="50dp"
            android:text="14GS"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/range1"
            android:text="@string/range"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/range"
            android:layout_marginLeft="200dp"
            android:text="0.0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hight1"
            android:text="@string/hight"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hight"
            android:layout_marginLeft="200dp"
            android:text="0.0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speed1"
            android:text="@string/speed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speed"
            android:layout_marginLeft="200dp"
            android:text="0.0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m/s"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distance1"
            android:text="@string/distance"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distance"
            android:layout_marginLeft="200dp"
            android:text="0.0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#F0909090"/>


</LinearLayout>
